<resources>
    <string name="app_name">firstapp</string>
    <string name="FirstActivity">First</string>
    <string name="secondActivity">Second</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an Account?</string>
    <string name="signup">Sign up</string>
    <string name="create_an_account">Create An Account</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login_with">Login with</string>
    <string name="login_with_facebook">Login With facebook</string>
    <string name="login_with_gmail">Login With Gmail</string>
    <string name="dashboard">DashBoard</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="people">People</string>
    <string name="folder">Folder</string>
    <string name="shared_with">Shared With</string>
    <string name="tvdashboard">Dashboard</string>
    <string name="_2_5mb">2.5mb</string>
    <string name="uploading">Uploading.....</string>
    <string name="design">Design File</string>
    <string name="logout">Logout</string>
    <string name="allfile">All Files</string>
    <string name="app_desisgn">App Desisgn</string>
    <string name="sketch">sketch</string>
    <string name="_2_3_mb">2.3 mb</string>
    <string name="designfile">Design File</string>
    <string name="hello">Hello</string>
    <string name="your_news">Your News</string>
    <string name="recommended">Recommended</string>
    <string name="investment">Investment</string>
    <string name="descripation">Descripation</string>
    <string name="or">OR</string>
    <string name="_91">+91</string>
    <string name="images">Images</string>
    <string name="addphoto">Add Photo !</string>
    <string name="camera">Camera</string>
    <string name="capture_photo">Capture Photo</string>
</resources>