<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.register.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D2E4FA"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <ImageView
                android:id="@+id/ivbackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/backArrow"
                android:src="@drawable/img_girlres_background" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rsecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/welcome_background_drawble">


            <TextView
                android:id="@+id/tvwelcomeback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin16"
                android:layout_marginTop="@dimen/margin16"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvlogintoyouraccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvwelcomeback"
                android:layout_marginLeft="@dimen/margin16"
                android:layout_marginTop="@dimen/margin8"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/login_to_your_account"
                android:textColor="@color/blue"
                android:textSize="@dimen/textsize20" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvlogintoyouraccount"
                android:layout_marginStart="@dimen/margin24"
                android:layout_marginTop="@dimen/margin16"
                android:layout_marginEnd="@dimen/margin24"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvemail"
                android:layout_marginStart="@dimen/margin24"
                android:layout_marginTop="@dimen/margin16"
                android:layout_marginEnd="@dimen/margin24"
                app:boxStrokeColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvforgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvpassword"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin8"
                android:layout_marginRight="@dimen/margin24"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/forgot_password" />


            <TextView
                android:id="@+id/loginbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvforgot"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin16"
                android:background="@drawable/button_curve_drawble"
                android:paddingLeft="150dp"
                android:paddingTop="@dimen/margin16"
                android:paddingRight="150dp"
                android:paddingBottom="@dimen/margin16"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize16" />


            <TextView
                android:id="@+id/tvdonto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginbtn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin8"
                android:layout_marginBottom="@dimen/margin8"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/do_not_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize8" />

            <!--  <TextView
                  android:id="@+id/tvsignup"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/loginbtn"
                  android:layout_marginTop="@dimen/margin8"
                  android:layout_toRightOf="@id/tvdonto"
                  android:layout_marginBottom="@dimen/margin8"
                  android:fontFamily="@font/montserrat_medium"
                  android:text="@string/signup"
                  android:textColor="@color/blue"
                  android:textSize="@dimen/textsize8"

                  />-->
        </RelativeLayout>


        <ImageView
            android:id="@+id/forwordarrow"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignTop="@id/rsecond"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="@dimen/margin30"
            android:background="@drawable/forword_back_arrow_drawable"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_arrow_forward_24" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>